Lab03/y.output
Terminals unused in grammar

    DO
    BREAK
    CHAR
    DOUBLE
    SWITCH
    CASE
    DEFAULT
    CONTINUE


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_definition

    6 $@1: ε

    7 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@1 compound_statement

    8 $@2: ε

    9 func_definition: type_specifier ID LPAREN RPAREN $@2 compound_statement

   10 parameter_list: parameter_list COMMA type_specifier ID
   11               | parameter_list COMMA type_specifier
   12               | type_specifier ID
   13               | type_specifier

   14 compound_statement: LCURL statements RCURL
   15                   | LCURL RCURL

   16 var_declaration: type_specifier declaration_list SEMICOLON

   17 type_specifier: INT
   18               | FLOAT
   19               | VOID

   20 declaration_list: declaration_list COMMA ID
   21                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   22                 | declaration_list COMMA ID LTHIRD CONST_FLOAT RTHIRD
   23                 | ID
   24                 | ID LTHIRD CONST_INT RTHIRD
   25                 | ID LTHIRD CONST_FLOAT RTHIRD

   26 statements: statement
   27           | statements statement

   28 statement: var_declaration
   29          | func_definition
   30          | expression_statement
   31          | compound_statement
   32          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   33          | IF LPAREN expression RPAREN statement
   34          | IF LPAREN expression RPAREN statement ELSE statement
   35          | WHILE LPAREN expression RPAREN statement
   36          | PRINTLN LPAREN ID RPAREN SEMICOLON
   37          | RETURN expression SEMICOLON

   38 expression_statement: SEMICOLON
   39                     | expression SEMICOLON

   40 variable: ID
   41         | ID LTHIRD expression RTHIRD

   42 expression: logic_expression
   43           | variable ASSIGNOP logic_expression

   44 logic_expression: rel_expression
   45                 | rel_expression LOGICOP rel_expression

   46 rel_expression: simple_expression
   47               | simple_expression RELOP simple_expression

   48 simple_expression: term
   49                  | simple_expression ADDOP term

   50 term: unary_expression
   51     | term MULOP unary_expression

   52 unary_expression: ADDOP unary_expression
   53                 | NOT unary_expression
   54                 | factor

   55 factor: variable
   56       | ID LPAREN argument_list RPAREN
   57       | LPAREN expression RPAREN
   58       | CONST_INT
   59       | CONST_FLOAT
   60       | variable INCOP
   61       | variable DECOP

   62 argument_list: arguments
   63              | ε

   64 arguments: arguments COMMA logic_expression
   65          | logic_expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IF (258) 33 34
    ELSE (259) 34
    FOR (260) 32
    WHILE (261) 35
    DO (262)
    BREAK (263)
    INT (264) 17
    CHAR (265)
    FLOAT (266) 18
    DOUBLE (267)
    VOID (268) 19
    RETURN (269) 37
    SWITCH (270)
    CASE (271)
    DEFAULT (272)
    CONTINUE (273)
    PRINTLN (274) 36
    ADDOP (275) 49 52
    MULOP (276) 51
    INCOP (277) 60
    DECOP (278) 61
    RELOP (279) 47
    ASSIGNOP (280) 43
    LOGICOP (281) 45
    NOT (282) 53
    LPAREN (283) 7 9 32 33 34 35 36 56 57
    RPAREN (284) 7 9 32 33 34 35 36 56 57
    LCURL (285) 14 15
    RCURL (286) 14 15
    LTHIRD (287) 21 22 24 25 41
    RTHIRD (288) 21 22 24 25 41
    COMMA (289) 10 11 20 21 22 64
    SEMICOLON (290) 16 36 37 38 39
    CONST_INT (291) 21 24 58
    CONST_FLOAT (292) 22 25 59
    ID (293) 7 9 10 12 20 21 22 23 24 25 36 40 41 56
    LOWER_THAN_ELSE (294)


Nonterminals, with rules where they appear

    $accept (40)
        on left: 0
    start (41)
        on left: 1
        on right: 0
    program (42)
        on left: 2 3
        on right: 1 2
    unit (43)
        on left: 4 5
        on right: 2 3
    func_definition (44)
        on left: 7 9
        on right: 5 29
    $@1 (45)
        on left: 6
        on right: 7
    $@2 (46)
        on left: 8
        on right: 9
    parameter_list (47)
        on left: 10 11 12 13
        on right: 7 10 11
    compound_statement (48)
        on left: 14 15
        on right: 7 9 31
    var_declaration (49)
        on left: 16
        on right: 4 28
    type_specifier (50)
        on left: 17 18 19
        on right: 7 9 10 11 12 13 16
    declaration_list (51)
        on left: 20 21 22 23 24 25
        on right: 16 20 21 22
    statements (52)
        on left: 26 27
        on right: 14 27
    statement (53)
        on left: 28 29 30 31 32 33 34 35 36 37
        on right: 26 27 32 33 34 35
    expression_statement (54)
        on left: 38 39
        on right: 30 32
    variable (55)
        on left: 40 41
        on right: 43 55 60 61
    expression (56)
        on left: 42 43
        on right: 32 33 34 35 37 39 41 57
    logic_expression (57)
        on left: 44 45
        on right: 42 43 64 65
    rel_expression (58)
        on left: 46 47
        on right: 44 45
    simple_expression (59)
        on left: 48 49
        on right: 46 47 49
    term (60)
        on left: 50 51
        on right: 48 49 51
    unary_expression (61)
        on left: 52 53 54
        on right: 50 51 52 53
    factor (62)
        on left: 55 56 57 58 59 60 61
        on right: 54
    argument_list (63)
        on left: 62 63
        on right: 56
    arguments (64)
        on left: 64 65
        on right: 62 64


State 0

    0 $accept: • start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    start            go to state 4
    program          go to state 5
    unit             go to state 6
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


State 1

   17 type_specifier: INT •

    $default  reduce using rule 17 (type_specifier)


State 2

   18 type_specifier: FLOAT •

    $default  reduce using rule 18 (type_specifier)


State 3

   19 type_specifier: VOID •

    $default  reduce using rule 19 (type_specifier)


State 4

    0 $accept: start • $end

    $end  shift, and go to state 10


State 5

    1 start: program •
    2 program: program • unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (start)

    unit             go to state 11
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


State 6

    3 program: unit •

    $default  reduce using rule 3 (program)


State 7

    5 unit: func_definition •

    $default  reduce using rule 5 (unit)


State 8

    4 unit: var_declaration •

    $default  reduce using rule 4 (unit)


State 9

    7 func_definition: type_specifier • ID LPAREN parameter_list RPAREN $@1 compound_statement
    9                | type_specifier • ID LPAREN RPAREN $@2 compound_statement
   16 var_declaration: type_specifier • declaration_list SEMICOLON

    ID  shift, and go to state 12

    declaration_list  go to state 13


State 10

    0 $accept: start $end •

    $default  accept


State 11

    2 program: program unit •

    $default  reduce using rule 2 (program)


State 12

    7 func_definition: type_specifier ID • LPAREN parameter_list RPAREN $@1 compound_statement
    9                | type_specifier ID • LPAREN RPAREN $@2 compound_statement
   23 declaration_list: ID •
   24                 | ID • LTHIRD CONST_INT RTHIRD
   25                 | ID • LTHIRD CONST_FLOAT RTHIRD

    LPAREN  shift, and go to state 14
    LTHIRD  shift, and go to state 15

    $default  reduce using rule 23 (declaration_list)


State 13

   16 var_declaration: type_specifier declaration_list • SEMICOLON
   20 declaration_list: declaration_list • COMMA ID
   21                 | declaration_list • COMMA ID LTHIRD CONST_INT RTHIRD
   22                 | declaration_list • COMMA ID LTHIRD CONST_FLOAT RTHIRD

    COMMA      shift, and go to state 16
    SEMICOLON  shift, and go to state 17


State 14

    7 func_definition: type_specifier ID LPAREN • parameter_list RPAREN $@1 compound_statement
    9                | type_specifier ID LPAREN • RPAREN $@2 compound_statement

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3
    RPAREN  shift, and go to state 18

    parameter_list  go to state 19
    type_specifier  go to state 20


State 15

   24 declaration_list: ID LTHIRD • CONST_INT RTHIRD
   25                 | ID LTHIRD • CONST_FLOAT RTHIRD

    CONST_INT    shift, and go to state 21
    CONST_FLOAT  shift, and go to state 22


State 16

   20 declaration_list: declaration_list COMMA • ID
   21                 | declaration_list COMMA • ID LTHIRD CONST_INT RTHIRD
   22                 | declaration_list COMMA • ID LTHIRD CONST_FLOAT RTHIRD

    ID  shift, and go to state 23


State 17

   16 var_declaration: type_specifier declaration_list SEMICOLON •

    $default  reduce using rule 16 (var_declaration)


State 18

    9 func_definition: type_specifier ID LPAREN RPAREN • $@2 compound_statement

    $default  reduce using rule 8 ($@2)

    $@2  go to state 24


State 19

    7 func_definition: type_specifier ID LPAREN parameter_list • RPAREN $@1 compound_statement
   10 parameter_list: parameter_list • COMMA type_specifier ID
   11               | parameter_list • COMMA type_specifier

    RPAREN  shift, and go to state 25
    COMMA   shift, and go to state 26


State 20

   12 parameter_list: type_specifier • ID
   13               | type_specifier •

    ID  shift, and go to state 27

    $default  reduce using rule 13 (parameter_list)


State 21

   24 declaration_list: ID LTHIRD CONST_INT • RTHIRD

    RTHIRD  shift, and go to state 28


State 22

   25 declaration_list: ID LTHIRD CONST_FLOAT • RTHIRD

    RTHIRD  shift, and go to state 29


State 23

   20 declaration_list: declaration_list COMMA ID •
   21                 | declaration_list COMMA ID • LTHIRD CONST_INT RTHIRD
   22                 | declaration_list COMMA ID • LTHIRD CONST_FLOAT RTHIRD

    LTHIRD  shift, and go to state 30

    $default  reduce using rule 20 (declaration_list)


State 24

    9 func_definition: type_specifier ID LPAREN RPAREN $@2 • compound_statement

    LCURL  shift, and go to state 31

    compound_statement  go to state 32


State 25

    7 func_definition: type_specifier ID LPAREN parameter_list RPAREN • $@1 compound_statement

    $default  reduce using rule 6 ($@1)

    $@1  go to state 33


State 26

   10 parameter_list: parameter_list COMMA • type_specifier ID
   11               | parameter_list COMMA • type_specifier

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    type_specifier  go to state 34


State 27

   12 parameter_list: type_specifier ID •

    $default  reduce using rule 12 (parameter_list)


State 28

   24 declaration_list: ID LTHIRD CONST_INT RTHIRD •

    $default  reduce using rule 24 (declaration_list)


State 29

   25 declaration_list: ID LTHIRD CONST_FLOAT RTHIRD •

    $default  reduce using rule 25 (declaration_list)


State 30

   21 declaration_list: declaration_list COMMA ID LTHIRD • CONST_INT RTHIRD
   22                 | declaration_list COMMA ID LTHIRD • CONST_FLOAT RTHIRD

    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36


State 31

   14 compound_statement: LCURL • statements RCURL
   15                   | LCURL • RCURL

    IF           shift, and go to state 37
    FOR          shift, and go to state 38
    WHILE        shift, and go to state 39
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 40
    PRINTLN      shift, and go to state 41
    ADDOP        shift, and go to state 42
    NOT          shift, and go to state 43
    LPAREN       shift, and go to state 44
    LCURL        shift, and go to state 31
    RCURL        shift, and go to state 45
    SEMICOLON    shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    func_definition       go to state 50
    compound_statement    go to state 51
    var_declaration       go to state 52
    type_specifier        go to state 9
    statements            go to state 53
    statement             go to state 54
    expression_statement  go to state 55
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 32

    9 func_definition: type_specifier ID LPAREN RPAREN $@2 compound_statement •

    $default  reduce using rule 9 (func_definition)


State 33

    7 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@1 • compound_statement

    LCURL  shift, and go to state 31

    compound_statement  go to state 64


State 34

   10 parameter_list: parameter_list COMMA type_specifier • ID
   11               | parameter_list COMMA type_specifier •

    ID  shift, and go to state 65

    $default  reduce using rule 11 (parameter_list)


State 35

   21 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT • RTHIRD

    RTHIRD  shift, and go to state 66


State 36

   22 declaration_list: declaration_list COMMA ID LTHIRD CONST_FLOAT • RTHIRD

    RTHIRD  shift, and go to state 67


State 37

   33 statement: IF • LPAREN expression RPAREN statement
   34          | IF • LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 68


State 38

   32 statement: FOR • LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 69


State 39

   35 statement: WHILE • LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 70


State 40

   37 statement: RETURN • expression SEMICOLON

    ADDOP        shift, and go to state 42
    NOT          shift, and go to state 43
    LPAREN       shift, and go to state 44
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable           go to state 56
    expression         go to state 71
    logic_expression   go to state 58
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 41

   36 statement: PRINTLN • LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 72


State 42

   52 unary_expression: ADDOP • unary_expression

    ADDOP        shift, and go to state 42
    NOT          shift, and go to state 43
    LPAREN       shift, and go to state 44
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable          go to state 73
    unary_expression  go to state 74
    factor            go to state 63


State 43

   53 unary_expression: NOT • unary_expression

    ADDOP        shift, and go to state 42
    NOT          shift, and go to state 43
    LPAREN       shift, and go to state 44
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable          go to state 73
    unary_expression  go to state 75
    factor            go to state 63


State 44

   57 factor: LPAREN • expression RPAREN

    ADDOP        shift, and go to state 42
    NOT          shift, and go to state 43
    LPAREN       shift, and go to state 44
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable           go to state 56
    expression         go to state 76
    logic_expression   go to state 58
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 45

   15 compound_statement: LCURL RCURL •

    $default  reduce using rule 15 (compound_statement)


State 46

   38 expression_statement: SEMICOLON •

    $default  reduce using rule 38 (expression_statement)


State 47

   58 factor: CONST_INT •

    $default  reduce using rule 58 (factor)


State 48

   59 factor: CONST_FLOAT •

    $default  reduce using rule 59 (factor)


State 49

   40 variable: ID •
   41         | ID • LTHIRD expression RTHIRD
   56 factor: ID • LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 77
    LTHIRD  shift, and go to state 78

    $default  reduce using rule 40 (variable)


State 50

   29 statement: func_definition •

    $default  reduce using rule 29 (statement)


State 51

   31 statement: compound_statement •

    $default  reduce using rule 31 (statement)


State 52

   28 statement: var_declaration •

    $default  reduce using rule 28 (statement)


State 53

   14 compound_statement: LCURL statements • RCURL
   27 statements: statements • statement

    IF           shift, and go to state 37
    FOR          shift, and go to state 38
    WHILE        shift, and go to state 39
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 40
    PRINTLN      shift, and go to state 41
    ADDOP        shift, and go to state 42
    NOT          shift, and go to state 43
    LPAREN       shift, and go to state 44
    LCURL        shift, and go to state 31
    RCURL        shift, and go to state 79
    SEMICOLON    shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    func_definition       go to state 50
    compound_statement    go to state 51
    var_declaration       go to state 52
    type_specifier        go to state 9
    statement             go to state 80
    expression_statement  go to state 55
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 54

   26 statements: statement •

    $default  reduce using rule 26 (statements)


State 55

   30 statement: expression_statement •

    $default  reduce using rule 30 (statement)


State 56

   43 expression: variable • ASSIGNOP logic_expression
   55 factor: variable •
   60       | variable • INCOP
   61       | variable • DECOP

    INCOP     shift, and go to state 81
    DECOP     shift, and go to state 82
    ASSIGNOP  shift, and go to state 83

    $default  reduce using rule 55 (factor)


State 57

   39 expression_statement: expression • SEMICOLON

    SEMICOLON  shift, and go to state 84


State 58

   42 expression: logic_expression •

    $default  reduce using rule 42 (expression)


State 59

   44 logic_expression: rel_expression •
   45                 | rel_expression • LOGICOP rel_expression

    LOGICOP  shift, and go to state 85

    $default  reduce using rule 44 (logic_expression)


State 60

   46 rel_expression: simple_expression •
   47               | simple_expression • RELOP simple_expression
   49 simple_expression: simple_expression • ADDOP term

    ADDOP  shift, and go to state 86
    RELOP  shift, and go to state 87

    $default  reduce using rule 46 (rel_expression)


State 61

   48 simple_expression: term •
   51 term: term • MULOP unary_expression

    MULOP  shift, and go to state 88

    $default  reduce using rule 48 (simple_expression)


State 62

   50 term: unary_expression •

    $default  reduce using rule 50 (term)


State 63

   54 unary_expression: factor •

    $default  reduce using rule 54 (unary_expression)


State 64

    7 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@1 compound_statement •

    $default  reduce using rule 7 (func_definition)


State 65

   10 parameter_list: parameter_list COMMA type_specifier ID •

    $default  reduce using rule 10 (parameter_list)


State 66

   21 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD •

    $default  reduce using rule 21 (declaration_list)


State 67

   22 declaration_list: declaration_list COMMA ID LTHIRD CONST_FLOAT RTHIRD •

    $default  reduce using rule 22 (declaration_list)


State 68

   33 statement: IF LPAREN • expression RPAREN statement
   34          | IF LPAREN • expression RPAREN statement ELSE statement

    ADDOP        shift, and go to state 42
    NOT          shift, and go to state 43
    LPAREN       shift, and go to state 44
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable           go to state 56
    expression         go to state 89
    logic_expression   go to state 58
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 69

   32 statement: FOR LPAREN • expression_statement expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 42
    NOT          shift, and go to state 43
    LPAREN       shift, and go to state 44
    SEMICOLON    shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    expression_statement  go to state 90
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 70

   35 statement: WHILE LPAREN • expression RPAREN statement

    ADDOP        shift, and go to state 42
    NOT          shift, and go to state 43
    LPAREN       shift, and go to state 44
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable           go to state 56
    expression         go to state 91
    logic_expression   go to state 58
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 71

   37 statement: RETURN expression • SEMICOLON

    SEMICOLON  shift, and go to state 92


State 72

   36 statement: PRINTLN LPAREN • ID RPAREN SEMICOLON

    ID  shift, and go to state 93


State 73

   55 factor: variable •
   60       | variable • INCOP
   61       | variable • DECOP

    INCOP  shift, and go to state 81
    DECOP  shift, and go to state 82

    $default  reduce using rule 55 (factor)


State 74

   52 unary_expression: ADDOP unary_expression •

    $default  reduce using rule 52 (unary_expression)


State 75

   53 unary_expression: NOT unary_expression •

    $default  reduce using rule 53 (unary_expression)


State 76

   57 factor: LPAREN expression • RPAREN

    RPAREN  shift, and go to state 94


State 77

   56 factor: ID LPAREN • argument_list RPAREN

    ADDOP        shift, and go to state 42
    NOT          shift, and go to state 43
    LPAREN       shift, and go to state 44
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    $default  reduce using rule 63 (argument_list)

    variable           go to state 73
    logic_expression   go to state 95
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63
    argument_list      go to state 96
    arguments          go to state 97


State 78

   41 variable: ID LTHIRD • expression RTHIRD

    ADDOP        shift, and go to state 42
    NOT          shift, and go to state 43
    LPAREN       shift, and go to state 44
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable           go to state 56
    expression         go to state 98
    logic_expression   go to state 58
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 79

   14 compound_statement: LCURL statements RCURL •

    $default  reduce using rule 14 (compound_statement)


State 80

   27 statements: statements statement •

    $default  reduce using rule 27 (statements)


State 81

   60 factor: variable INCOP •

    $default  reduce using rule 60 (factor)


State 82

   61 factor: variable DECOP •

    $default  reduce using rule 61 (factor)


State 83

   43 expression: variable ASSIGNOP • logic_expression

    ADDOP        shift, and go to state 42
    NOT          shift, and go to state 43
    LPAREN       shift, and go to state 44
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable           go to state 73
    logic_expression   go to state 99
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 84

   39 expression_statement: expression SEMICOLON •

    $default  reduce using rule 39 (expression_statement)


State 85

   45 logic_expression: rel_expression LOGICOP • rel_expression

    ADDOP        shift, and go to state 42
    NOT          shift, and go to state 43
    LPAREN       shift, and go to state 44
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable           go to state 73
    rel_expression     go to state 100
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 86

   49 simple_expression: simple_expression ADDOP • term

    ADDOP        shift, and go to state 42
    NOT          shift, and go to state 43
    LPAREN       shift, and go to state 44
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable          go to state 73
    term              go to state 101
    unary_expression  go to state 62
    factor            go to state 63


State 87

   47 rel_expression: simple_expression RELOP • simple_expression

    ADDOP        shift, and go to state 42
    NOT          shift, and go to state 43
    LPAREN       shift, and go to state 44
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable           go to state 73
    simple_expression  go to state 102
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 88

   51 term: term MULOP • unary_expression

    ADDOP        shift, and go to state 42
    NOT          shift, and go to state 43
    LPAREN       shift, and go to state 44
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable          go to state 73
    unary_expression  go to state 103
    factor            go to state 63


State 89

   33 statement: IF LPAREN expression • RPAREN statement
   34          | IF LPAREN expression • RPAREN statement ELSE statement

    RPAREN  shift, and go to state 104


State 90

   32 statement: FOR LPAREN expression_statement • expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 42
    NOT          shift, and go to state 43
    LPAREN       shift, and go to state 44
    SEMICOLON    shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    expression_statement  go to state 105
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 91

   35 statement: WHILE LPAREN expression • RPAREN statement

    RPAREN  shift, and go to state 106


State 92

   37 statement: RETURN expression SEMICOLON •

    $default  reduce using rule 37 (statement)


State 93

   36 statement: PRINTLN LPAREN ID • RPAREN SEMICOLON

    RPAREN  shift, and go to state 107


State 94

   57 factor: LPAREN expression RPAREN •

    $default  reduce using rule 57 (factor)


State 95

   65 arguments: logic_expression •

    $default  reduce using rule 65 (arguments)


State 96

   56 factor: ID LPAREN argument_list • RPAREN

    RPAREN  shift, and go to state 108


State 97

   62 argument_list: arguments •
   64 arguments: arguments • COMMA logic_expression

    COMMA  shift, and go to state 109

    $default  reduce using rule 62 (argument_list)


State 98

   41 variable: ID LTHIRD expression • RTHIRD

    RTHIRD  shift, and go to state 110


State 99

   43 expression: variable ASSIGNOP logic_expression •

    $default  reduce using rule 43 (expression)


State 100

   45 logic_expression: rel_expression LOGICOP rel_expression •

    $default  reduce using rule 45 (logic_expression)


State 101

   49 simple_expression: simple_expression ADDOP term •
   51 term: term • MULOP unary_expression

    MULOP  shift, and go to state 88

    $default  reduce using rule 49 (simple_expression)


State 102

   47 rel_expression: simple_expression RELOP simple_expression •
   49 simple_expression: simple_expression • ADDOP term

    ADDOP  shift, and go to state 86

    $default  reduce using rule 47 (rel_expression)


State 103

   51 term: term MULOP unary_expression •

    $default  reduce using rule 51 (term)


State 104

   33 statement: IF LPAREN expression RPAREN • statement
   34          | IF LPAREN expression RPAREN • statement ELSE statement

    IF           shift, and go to state 37
    FOR          shift, and go to state 38
    WHILE        shift, and go to state 39
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 40
    PRINTLN      shift, and go to state 41
    ADDOP        shift, and go to state 42
    NOT          shift, and go to state 43
    LPAREN       shift, and go to state 44
    LCURL        shift, and go to state 31
    SEMICOLON    shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    func_definition       go to state 50
    compound_statement    go to state 51
    var_declaration       go to state 52
    type_specifier        go to state 9
    statement             go to state 111
    expression_statement  go to state 55
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 105

   32 statement: FOR LPAREN expression_statement expression_statement • expression RPAREN statement

    ADDOP        shift, and go to state 42
    NOT          shift, and go to state 43
    LPAREN       shift, and go to state 44
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable           go to state 56
    expression         go to state 112
    logic_expression   go to state 58
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 106

   35 statement: WHILE LPAREN expression RPAREN • statement

    IF           shift, and go to state 37
    FOR          shift, and go to state 38
    WHILE        shift, and go to state 39
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 40
    PRINTLN      shift, and go to state 41
    ADDOP        shift, and go to state 42
    NOT          shift, and go to state 43
    LPAREN       shift, and go to state 44
    LCURL        shift, and go to state 31
    SEMICOLON    shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    func_definition       go to state 50
    compound_statement    go to state 51
    var_declaration       go to state 52
    type_specifier        go to state 9
    statement             go to state 113
    expression_statement  go to state 55
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 107

   36 statement: PRINTLN LPAREN ID RPAREN • SEMICOLON

    SEMICOLON  shift, and go to state 114


State 108

   56 factor: ID LPAREN argument_list RPAREN •

    $default  reduce using rule 56 (factor)


State 109

   64 arguments: arguments COMMA • logic_expression

    ADDOP        shift, and go to state 42
    NOT          shift, and go to state 43
    LPAREN       shift, and go to state 44
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    variable           go to state 73
    logic_expression   go to state 115
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 110

   41 variable: ID LTHIRD expression RTHIRD •

    $default  reduce using rule 41 (variable)


State 111

   33 statement: IF LPAREN expression RPAREN statement •
   34          | IF LPAREN expression RPAREN statement • ELSE statement

    ELSE  shift, and go to state 116

    $default  reduce using rule 33 (statement)


State 112

   32 statement: FOR LPAREN expression_statement expression_statement expression • RPAREN statement

    RPAREN  shift, and go to state 117


State 113

   35 statement: WHILE LPAREN expression RPAREN statement •

    $default  reduce using rule 35 (statement)


State 114

   36 statement: PRINTLN LPAREN ID RPAREN SEMICOLON •

    $default  reduce using rule 36 (statement)


State 115

   64 arguments: arguments COMMA logic_expression •

    $default  reduce using rule 64 (arguments)


State 116

   34 statement: IF LPAREN expression RPAREN statement ELSE • statement

    IF           shift, and go to state 37
    FOR          shift, and go to state 38
    WHILE        shift, and go to state 39
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 40
    PRINTLN      shift, and go to state 41
    ADDOP        shift, and go to state 42
    NOT          shift, and go to state 43
    LPAREN       shift, and go to state 44
    LCURL        shift, and go to state 31
    SEMICOLON    shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ID           shift, and go to state 49

    func_definition       go to state 50
    compound_statement    go to state 51
    var_declaration       go to state 52
    type_specifier        go to state 9
    statement             go to state 118
    expression_statement  go to state 55
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 117

   32 statement: FOR LPAREN expression_statement expression_statement expression RPAREN • statement
